Fixed overlapping text

--- a/src/components/completion-chart/_completion-chart.scss
+++ b/src/components/completion-chart/_completion-chart.scss
@@ -418,7 +418,9 @@
   }
 
   .label {
-    line-height: 1.6rem;
+    .name {
+      line-height: 1.6rem;
+    }
   }
 
   &.is-mac {
